<resources>
    <string name="app_name">MarvelApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem_ipsum">Mussum Ipsum, cacilds vidis litro abertis.Si u mundo tá muito paradis? Toma um mé que o mundo vai girarzis!</string>
    <string name="no_description">No description in Marvel Characters database.</string>
    <string name="image_of_the_chacarters">Image of the Characters</string>
    <string name="comics">Comics</string>
    <string name="series">Series</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Alternate images grid</string>
</resources>