<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_blue"
    tools:context=".view.DetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_character_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/image_of_the_chacarters"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toTopOf="@+id/gl_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/big_character" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_begin="400dp"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_comic_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/no_description"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_character_image"
            tools:text="@string/lorem_ipsum" />

        <TextView
            android:id="@+id/tv_comics_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/comics"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="italic"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@+id/tv_comic_description"
            tools:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_character_comics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_comics_title"
            tools:visibility="visible">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/tv_series_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/series"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="italic"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@+id/rv_character_comics"
            tools:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_character_series"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_series_title"
            tools:visibility="visible">

        </androidx.recyclerview.widget.RecyclerView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>